# discordpp

./: .gitmodules  CMakeLists.txt  discordpp.hh  main.cc
discordpp/: bot.hh  client.hh  discordpp.hh
src/: bot.cc  client.cc  discordpp.cc
